clusters/homelab/apps/open-webui/open-webui-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: homelab
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - chat.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: open-webui
          port: 80
