clusters/homelab/apps/open-webui/rm-http-route.yaml
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: homelab
